# WorkGraphPlayground

./: .clang-format  .gitignore  CMakeLists.txt  license.txt  readme.md
imported/: CMakeLists.txt  nuget.cmake
include/: Application.h  Device.h  ShaderCompiler.h  Swapchain.h  Window.h  WorkGraph.h
src/: Application.cpp  Device.cpp  ShaderCompiler.cpp  Swapchain.cpp  Window.cpp  WorkGraph.cpp  main.cpp
tutorials/: Common.h
tutorials/tutorial-0/: HelloWorkGraphs.hlsl
tutorials/tutorial-1/: Records.hlsl  RecordsSolution.hlsl
tutorials/tutorial-2/: NodeLaunches.hlsl  NodeLaunchesSolution.hlsl
tutorials/tutorial-3/: MaterialShading.hlsl  MaterialShadingSolution.hlsl  Scene.h
tutorials/tutorial-4/: Recursion.hlsl  RecursionSolution.hlsl
tutorials/tutorial-5/: Synchronization.hlsl  SynchronizationSolution.hlsl
tutorials/tutorial-6/: Mandelbrot.h  RecursiveGrid.hlsl  RecursiveGridSolution.hlsl
